feat(playground): update 13-list-groups-badges.html

--- a/playground/13-list-groups-badges.html
+++ b/playground/13-list-groups-badges.html
@@ -151,6 +151,33 @@
           </li>
         </div>
       </div>
+
+      <hr class="my-5" />
+
+      <!-- Positioned Badge -->
+      <div class="container">
+        <button class="btn btn-primary position-relative">
+          Inbox
+          <span
+            class="badge text-bg-danger position-absolute top-0 start-100 translate-middle rounded-pill"
+            >99+</span
+          >
+          <span class="visually-hidden">Unread messages</span>
+        </button>
+      </div>
+
+      <hr class="my-5" />
+
+      <!-- Profile Alert Example -->
+      <div class="container">
+        <button class="btn btn-primary position-relative">
+          Profile
+          <span
+            class="badge text-bg-danger border border-white rounded-circle d-inline-block p-2 position-absolute top-0 start-100 translate-middle"
+          ></span>
+          <span class="visually-hidden">New alerts</span>
+        </button>
+      </div>
       <hr class="my-5" />
     </div>
     <script
