--- a/mini-projs/pricing-cards/index.html
+++ b/mini-projs/pricing-cards/index.html
@@ -4,54 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pricing Cards</title>
-    <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="stylesheet"
-      href="../node_modules/bootstrap-icons/font/bootstrap-icons.min.css" />
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div class="container col-8 col-md-12 col-lg-8" style="margin-top: 6rem">
-      <div class="row row-cols-sm-1 row-cols-md-3 gap-4 justify-content-center">
-        <div class="card rounded-4 shadow-lg text-bg-light">
-          <div class="card-body">
-            <h3 class="card-title lh-1">
-              Free<br /><small class="text-secondary h6">For Freelancers</small>
-            </h3>
-            <div class="card-text mt-5">
-              <p class="h2 mb-5" style="font-weight: 900">$0</p>
-              <ul class="list-unstyled fw-medium lh-lg mb-5">
+    <div class="container" style="width: 100vw; margin-top: 6rem">
+      <div class="row row-cols-4 gap-4 justify-content-center">
+        <div class="card rounded-3 shadow-lg">
+          <div class="card-body vstack gap-3">
+            <div class="vstack gap-0">
+              <h4 class="card-title fw-bold">Free</h4>
+              <small class="text-muted">For Freelancers</small>
+            </div>
+            <div class="card-text vstack gap-3">
+              <p class="fs-1 fw-bold">$0</p>
+              <ul class="list-unstyled vstack gap-2 fw-medium fs-6">
                 <li><i class="bi bi-check2"></i> Single User</li>
                 <li><i class="bi bi-check2"></i> 10 Downloads Per Month</li>
                 <li><i class="bi bi-check2"></i> Faster Files</li>
                 <li><i class="bi bi-check2"></i> 25 Custom Packs</li>
               </ul>
             </div>
-            <button class="btn btn-dark rounded-pill w-100 fw-medium">
-              Subscribe
-            </button>
+            <div>
+              <button class="btn btn-dark rounded-pill w-100">Subscribe</button>
+            </div>
           </div>
         </div>
-        <div class="card rounded-4 shadow-sm text-bg-dark">
-          <div class="card-body">
-            <h3 class="card-title lh-1">
-              Pro<br /><small class="text-light h6">For Agencies</small>
-            </h3>
-            <div class="card-text mt-5">
-              <p class="h2 mb-5" style="font-weight: 900">$100</p>
-              <ul class="list-unstyled fw-medium lh-lg mb-5">
+        <div class="card rounded-3 text-bg-dark shadow">
+          <div class="card-body vstack gap-3">
+            <div class="vstack gap-0">
+              <h4 class="card-title fw-bold">Pro</h4>
+              <small>For Agencies</small>
+            </div>
+            <div class="card-text vstack gap-3">
+              <p class="fs-1 fw-bold">$100</p>
+              <ul class="list-unstyled vstack gap-2 fw-medium fs-6">
                 <li><i class="bi bi-check2"></i> Unlimited Users</li>
                 <li><i class="bi bi-check2"></i> Unlimited Downloads</li>
                 <li><i class="bi bi-check2"></i> Full-Editable Files</li>
                 <li><i class="bi bi-check2"></i> 200+ Custom Packs</li>
               </ul>
             </div>
-            <button class="btn btn-light rounded-pill w-100 fw-medium">
-              Subscribe
-            </button>
+            <div>
+              <button class="btn btn-light rounded-pill w-100">
+                Subscribe
+              </button>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <script src="./scripts/main.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
