fix(mini-projs/pricing-cards): fix responsive layout

--- a/mini-projs/pricing-cards/index.html
+++ b/mini-projs/pricing-cards/index.html
@@ -11,8 +11,9 @@
   </head>
   <body>
     <div class="container" style="width: 100vw; margin-top: 6rem">
-      <div class="row row-cols-4 gap-4 justify-content-center">
-        <div class="card rounded-3 shadow-lg">
+      <div
+        class="row px-5 px-md-0 row-cols-1 row-cols-md-2 row-cols-lg-3 gap-4 justify-content-center">
+        <div class="col card rounded-3 shadow-lg">
           <div class="card-body vstack gap-3">
             <div class="vstack gap-0">
               <h4 class="card-title fw-bold">Free</h4>
@@ -32,7 +33,7 @@
             </div>
           </div>
         </div>
-        <div class="card rounded-3 text-bg-dark shadow">
+        <div class="col card rounded-3 text-bg-dark shadow">
           <div class="card-body vstack gap-3">
             <div class="vstack gap-0">
               <h4 class="card-title fw-bold">Pro</h4>
