--- a/mini-projs/rating-component/index.html
+++ b/mini-projs/rating-component/index.html
@@ -11,108 +11,127 @@
   </head>
   <body>
     <div
-      class="container col-12 vstack align-items-center"
-      style="margin-top: 8rem">
-      <div class="card col-lg-6 py-4 px-5 border rounded-2 shadow">
-        <div class="card-body vstack gap-5">
-          <div class="row justify-content-between">
-            <h3 class="fw-bold col-sm-8">
-              What others think about the product?
-            </h3>
-            <div
-              class="col-2 col-sm-3 vstack border border-1 rounded-2 px-3 py-2 shadow">
-              <div class="hstack fw-bold gap-2 align-items-baseline">
-                <i class="bi bi-star-fill fs-5 fs-md-3 text-warning"></i>
-                <p aria-label="average Rating" class="fs-4 fs-md-2">4.8</p>
-              </div>
-              <small>Average Rating</small>
+      class="container col-11 col-sm-10 col-md-8 col-lg-6 justify-content-center border shadow p-5 mt-5">
+      <!-- Header Row -->
+      <div class="row justify-content-evenly mb-5">
+        <div class="col-md-7">
+          <h4 class="fw-bold fs-2">What others think about the product</h4>
+        </div>
+        <div class="offset-4 offset-md-0 col-7 col-sm-5 col-md-3">
+          <div
+            class="container border border-1 shadow p-2 rounded-2 text-center">
+            <div class="container d-flex gap-2 align-items-sm-baseline">
+              <i class="bi bi-star-fill text-warning fs-3"></i>
+              <p class="fs-3 fw-bold">4.8</p>
             </div>
+            <small>Average Rating</small>
           </div>
-          <div>
-            <div class="input-group">
-              <i
-                class="bi bi-search input-group-text rounded-start-pill shadow-sm"></i>
-              <input
-                type="search"
-                class="form-control rounded-end-pill shadow-sm"
-                placeholder="Search Reviews" />
-            </div>
+        </div>
+      </div>
+      <!-- Search Row -->
+      <div class="row mb-5 justify-content-center">
+        <div class="col-12 col-sm-10 col-md-8">
+          <div class="input-group">
+            <i
+              class="bi bi-search input-group-text rounded-start-pill shadow-sm"></i>
+            <input
+              type="search"
+              placeholder="Search Reviews"
+              class="form-control rounded-end-pill shadow-sm" />
           </div>
-          <div>
-            <h5 class="fw-medium mb-3">Reviews</h5>
-            <div class="vstack text-end">
-              <div class="hstack gap-2">
-                <div class="col">
-                  5 <i class="bi bi-star-fill text-warning"></i>
-                </div>
-                <div
-                  class="progress col-11 rounded-pill"
-                  role="progressbar"
-                  aria-valuenow="0"
-                  aria-valuemin="0"
-                  aria-valuemax="100">
-                  <div
-                    class="progress-bar bg-warning"
-                    style="width: 100%"></div>
-                </div>
+        </div>
+      </div>
+      <!-- Reviews Row-->
+      <div class="row">
+        <div class="col">
+          <div class="mb-3">
+            <h5>Reviews</h5>
+          </div>
+
+          <!-- Review Ratings -->
+          <div class="vstack gap-2">
+            <!-- Star Row Template -->
+            <div class="d-flex align-items-center gap-2">
+              <div class="text-nowrap" style="width: 2rem">
+                5 <i class="bi bi-star-fill text-warning"></i>
               </div>
-              <div class="hstack gap-2">
-                <div class="col">
-                  4 <i class="bi bi-star-fill text-warning"></i>
-                </div>
-                <div
-                  class="progress col-11 rounded-pill"
-                  role="progressbar"
-                  aria-valuenow="0"
-                  aria-valuemin="0"
-                  aria-valuemax="100">
-                  <div class="progress-bar bg-warning" style="width: 80%"></div>
-                </div>
-              </div>
-              <div class="hstack gap-2">
-                <div class="col">
-                  3 <i class="bi bi-star-fill text-warning"></i>
-                </div>
-                <div
-                  class="progress col-11 rounded-pill"
-                  role="progressbar"
-                  aria-valuenow="0"
-                  aria-valuemin="0"
-                  aria-valuemax="100">
-                  <div class="progress-bar bg-warning" style="width: 60%"></div>
-                </div>
-              </div>
-              <div class="hstack gap-2">
-                <div class="col">
-                  2 <i class="bi bi-star-fill text-warning"></i>
-                </div>
-                <div
-                  class="progress col-11 rounded-pill"
-                  role="progressbar"
-                  aria-valuenow="0"
-                  aria-valuemin="0"
-                  aria-valuemax="100">
-                  <div class="progress-bar bg-warning" style="width: 40%"></div>
-                </div>
-              </div>
-              <div class="hstack gap-2">
-                <div class="col">
-                  1 <i class="bi bi-star-fill text-warning"></i>
-                </div>
-                <div
-                  class="progress col-11 rounded-pill"
-                  role="progressbar"
-                  aria-valuenow="0"
-                  aria-valuemin="0"
-                  aria-valuemax="100">
-                  <div class="progress-bar bg-warning" style="width: 20%"></div>
-                </div>
+              <div
+                class="progress w-100 rounded-pill"
+                role="progressbar"
+                aria-valuenow="100"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="height: 1rem">
+                <div class="progress-bar bg-warning" style="width: 100%"></div>
               </div>
             </div>
+
+            <div class="d-flex align-items-center gap-2">
+              <div class="text-nowrap" style="width: 2rem">
+                4 <i class="bi bi-star-fill text-warning"></i>
+              </div>
+              <div
+                class="progress w-100 rounded-pill"
+                role="progressbar"
+                aria-valuenow="80"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="height: 1rem">
+                <div class="progress-bar bg-warning" style="width: 80%"></div>
+              </div>
+            </div>
+
+            <div class="d-flex align-items-center gap-2">
+              <div class="text-nowrap" style="width: 2rem">
+                3 <i class="bi bi-star-fill text-warning"></i>
+              </div>
+              <div
+                class="progress w-100 rounded-pill"
+                role="progressbar"
+                aria-valuenow="60"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="height: 1rem">
+                <div class="progress-bar bg-warning" style="width: 60%"></div>
+              </div>
+            </div>
+
+            <div class="d-flex align-items-center gap-2">
+              <div class="text-nowrap" style="width: 2rem">
+                2 <i class="bi bi-star-fill text-warning"></i>
+              </div>
+              <div
+                class="progress w-100 rounded-pill"
+                role="progressbar"
+                aria-valuenow="40"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="height: 1rem">
+                <div class="progress-bar bg-warning" style="width: 40%"></div>
+              </div>
+            </div>
+
+            <div class="d-flex align-items-center gap-2">
+              <div class="text-nowrap" style="width: 2rem">
+                1 <i class="bi bi-star-fill text-warning"></i>
+              </div>
+              <div
+                class="progress w-100 rounded-pill"
+                role="progressbar"
+                aria-valuenow="20"
+                aria-valuemin="0"
+                aria-valuemax="100"
+                style="height: 1rem">
+                <div class="progress-bar bg-warning" style="width: 20%"></div>
+              </div>
+            </div>
           </div>
-          <div>
-            <button class="btn btn-success rounded-pill">Write Review</button>
-          </div>
+        </div>
+      </div>
+      <!-- Submit Button Row -->
+      <div class="row mt-5">
+        <div class="col col-md-6">
+          <button class="btn btn-success rounded-pill">Write Review</button>
         </div>
       </div>
     </div>
