--- a/starter/index.html
+++ b/starter/index.html
@@ -13,6 +13,6 @@
     <div class="container mt-5 col-4 text-center">
       <h2 class="alert alert-success">Hello From Starter🎉!</h2>
     </div>
-    <script src="./js/index.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
