feat(mini-proj): enhance user-list proj

--- a/mini-projs/user-list/index.html
+++ b/mini-projs/user-list/index.html
@@ -10,83 +10,72 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div class="container vstack mt-3" style="min-height: 95vh;">
-      <header class="mb-5">
-        <div class="vstack gap-3">
-          <!-- Dark and Light Mode Toggles -->
-          <div class="d-flex justify-content-end">
-            <div class="btn-group">
-              <button
-                class="btn theme-btn btn-secondary active"
-                data-theme="dark">
-                Dark
-              </button>
-              <button class="btn theme-btn btn-secondary" data-theme="light">
-                Light
-              </button>
-            </div>
-          </div>
-
-          <!-- Title -->
-          <h2 class="text-secondary-emphasis">Users</h2>
-
-          <!-- Search and Filters -->
-          <div class="row g-4 justify-content-md-between">
-            <div class="col-md-4">
-              <input
-                type="search"
-                placeholder="Search Users"
-                class="form-control fs-6" />
-            </div>
-            <div class="col-md-8">
-              <div
-                class="hstack gap-1 gap-lg-3 justify-content-md-end flex-wrap">
-                <a href="#" class="btn btn-outline-primary border-0"
-                  >Reputation</a
-                ><a href="#" class="btn btn-outline-primary border-0 active"
-                  >New Users</a
-                ><a href="#" class="btn btn-outline-primary border-0">Editors</a
-                ><a href="#" class="btn btn-outline-primary border-0"
-                  >Moderators</a
-                >
-              </div>
-            </div>
+    <div class="container vstack pt-3" style="min-height: 100vh">
+      <!-- Header -->
+      <head class="container mt-5">
+        <!-- Dark & light mode -->
+        <div class="d-flex">
+          <div class="btn-group ms-auto" id="themeBtnGroup">
+            <button class="btn btn-dark active btn-sm" data-theme="dark">
+              Dark
+            </button>
+            <button class="btn btn-light btn-sm" data-theme="light">
+              Light
+            </button>
           </div>
         </div>
-      </header>
 
-      <main class="vstack flex-grow-1">
-        <!-- User cards -->
+        <!-- Title -->
+        <h1 class="text-muted">Users</h1>
+
+        <!-- Search & Filters -->
+        <div class="d-flex flex-wrap gap-4 mt-4">
+          <div class="col-12 col-lg-3">
+            <input
+              type="search"
+              placeholder="Search Users"
+              class="form-control" />
+          </div>
+          <div class="d-flex flex-wrap gap-3 ms-lg-auto">
+            <a href="#" class="btn btn-outline-primary border-0">Reputation</a
+            ><a href="#" class="btn btn-outline-primary border-0 active"
+              >New Users</a
+            ><a href="#" class="btn btn-outline-primary border-0">Editors</a
+            ><a href="#" class="btn btn-outline-primary border-0">Moderators</a>
+          </div>
+        </div>
+      </head>
+
+      <!-- Main -->
+      <main class="flex-grow-1 mt-5 d-flex flex-column">
+        <!-- Cards -->
         <div
           class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4"
-          id="usersContainer">
-          <!-- <div class="col p-3">
-            <div
-              class="container h-100 bg-body-secondary border border-1 rounded-1 shadow-lg p-3">
-              <div class="d-flex flex-wrap justify-content-between">
-                <div class="col-4">
-                  <img
-                    src="https://fakeimg.pl/250x100/"
-                    class="w-100 object-fit-cover rounded-circle"
-                    style="aspect-ratio: 1" />
-                </div>
-                <div class="col-7">
-                  <div class="mb-4 lh-1">
-                    <h5>John Doe</h5>
-                    <p class="fs-6">Tory MI</p>
-                  </div>
-                  <div class="d-flex flex-wrap gap-1">
-                    <div class="badge text-bg-primary">Software</div>
-                    <div class="badge text-bg-primary">Music</div>
-                    <div class="badge text-bg-primary">Sports</div>
-                  </div>
+          id="userCardsContainer">
+          <!-- <div
+            class="col"
+            data-bs-toggle="tooltip"
+            data-bs-title="johndoe@email.com">
+            <div class="d-flex gap-2 p-3 border border-1 rounded-2 shadow-sm">
+              <img
+                src="https://fakeimg.pl/250x100/"
+                class="rounded-circle object-fit-cover d-block"
+                style="width: 8rem; height: 8rem" />
+              <div class="d-flex flex-column bg-text-secondary">
+                <h5>John Doe</h5>
+                <p class="h6">Tory, MI</p>
+                <div class="d-flex flex-wrap gap-2 mt-3">
+                  <div class="badge bg-primary">Item</div>
+                  <div class="badge bg-primary">Item</div>
+                  <div class="badge bg-primary">Item</div>
                 </div>
               </div>
             </div>
           </div> -->
         </div>
+
         <!-- Pagination -->
-        <div class="container d-flex justify-content-center mt-auto py-3">
+        <div class="d-flex justify-content-center align-items-center mt-auto">
           <nav aria-label="Page navigation example">
             <ul class="pagination">
               <li class="page-item disabled">
@@ -98,7 +87,9 @@
               <li class="page-item"><a class="page-link" href="#">2</a></li>
               <li class="page-item"><a class="page-link" href="#">3</a></li>
               <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">&raquo;</a>
+                <a class="page-link" href="#" aria-label="Next">
+                  <span aria-hidden="true">&raquo;</span>
+                </a>
               </li>
             </ul>
           </nav>
